--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -5,9 +5,8 @@ services:
     image: postgres:12.4-alpine
     volumes:
       - ./postgres_data:/var/lib/postgresql/data
-    environment:
-      - POSTGRES_DB=postgres
-      - POSTGRES_USER=postgres
+    env_file:
+      - ./.env.db
     restart: always
 
   app:
