--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -16,7 +16,7 @@ ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 
 RUN apk update \
-    && apk add postgresql-dev gcc python3-dev musl-dev
+    && apk add postgresql-dev musl-dev gcc python3-dev
 
 RUN pip install --upgrade pip
 COPY requirements ./requirements/
